--- a/TradeTrackerApp/SCTradeTracker.csproj
+++ b/TradeTrackerApp/SCTradeTracker.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,10 +63,12 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="API\Hotkey.cs" />
+    <Compile Include="API\Screenshot.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ComputerVision\CVClient.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -104,8 +107,6 @@
     </PackageReference>
     <PackageReference Include="Prism.Unity" Version="7.2.0.1367" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GoogleApi\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
